[gd_scene load_steps=6 format=3 uid="uid://cwsp8t4xeo1ng"]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_30.tres" id="1_rchgg"]
[ext_resource type="Script" path="res://addons/fart_engine/Event_Manager/Command_List_Forms/Command_List_Form.gd" id="1_yu2vf"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="3_dfh1w"]
[ext_resource type="PackedScene" uid="uid://bljk1h4gp4q58" path="res://addons/fart_engine/Event_Manager/Command_List_Forms/Command_List_Button.tscn" id="3_siuql"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/Navigation_Button_Template.tscn" id="4_ihgyg"]

[node name="CommandListForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rchgg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" parent="VBoxContainer" instance=ExtResource("3_dfh1w")]
layout_mode = 2
size_flags_vertical = 1

[node name="Label_Button" parent="VBoxContainer/Label/HBox1" index="0"]
button_text = "Command List"

[node name="Close1" type="Button" parent="VBoxContainer/Label/HBox1" index="2"]
visible = false
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Close"

[node name="Close" parent="VBoxContainer/Label/HBox1" index="3" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Close"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
disabled = true
text = "Command List"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/DialogVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dialog"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/DialogVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/DialogVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="start_dialog" parent="VBoxContainer/HBoxContainer/DialogVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "New Dialog"

[node name="InventoryVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Options"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="modify_player_inventory1" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
visible = false
layout_mode = 2
text = "Modify Inventory"

[node name="modify_player_inventory" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Modify Inventory"

[node name="transfer_player" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Transfer Player"

[node name="change_player_health" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Change Player Health"

[node name="ProgressionVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Event Progression"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="change_game_state" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Game State"

[node name="change_local_variable" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Local Variables"

[node name="change_dialog_options" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Dialog Options"

[node name="change_global_variable" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Global Variables"

[node name="remove_event" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Remove Event"

[node name="wait" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Wait"

[node name="MovementVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MovementVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Movement"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/MovementVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MovementVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MiscVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Miscellaneous"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="print_to_console" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Print to Console"

[node name="sfx" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Audio"

[node name="CameraVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CameraVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Camera"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/CameraVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="set_camera_speed" parent="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Camera Speed"

[node name="set_camera_follow_player" parent="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Camera Follow Player"

[node name="move_camera" parent="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Move Camera"

[node name="move_camera_to_event" parent="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer/VBoxContainer" groups=["Table Action"] instance=ExtResource("4_ihgyg")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
button_text = "Camera Follow Event"

[connection signal="button_up" from="VBoxContainer/Label/HBox1/Close1" to="." method="_on_close_button_up"]
[connection signal="button_up" from="VBoxContainer/Label/HBox1/Close" to="." method="_on_close_button_up"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/DialogVBoxContainer/ScrollContainer/VBoxContainer/start_dialog" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer/modify_player_inventory1" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer/modify_player_inventory" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer/transfer_player" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer/change_player_health" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/change_game_state" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/change_local_variable" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/change_dialog_options" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/change_global_variable" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/remove_event" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/wait" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer/VBoxContainer/print_to_console" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer/VBoxContainer/sfx" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer/VBoxContainer/set_camera_speed" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer/VBoxContainer/set_camera_follow_player" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer/VBoxContainer/move_camera" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/CameraVBoxContainer/ScrollContainer/VBoxContainer/move_camera_to_event" to="." method="_open_selected_form"]

[editable path="VBoxContainer/Label"]
